--- a/resources/css/objects/containers.css
+++ b/resources/css/objects/containers.css
@@ -2,6 +2,7 @@
  * Containers
  ********************************/
 .container {
+	width: 100%;
 	max-width: 650px;
 	margin: 0 auto;
 	padding: 0 var(--margin-s);
