--- a/resources/css/settings/margins.css
+++ b/resources/css/settings/margins.css
@@ -3,6 +3,7 @@
  ********************************/
 :root {
 	--margin-xl: 150px;
+	--margin-l: 50px;
 	--margin-m: 25px;
 	--margin-s: 18px;
 	--margin-xs: 14px;
